--- a/src/client/Dockerfile
+++ b/src/client/Dockerfile
@@ -2,16 +2,16 @@ FROM node:18 AS builder
 WORKDIR /app
 
 # 패키지 설치
-COPY client/package.json client/package-lock.json ./
+COPY src/client/package.json src/client/package-lock.json ./
 RUN npm install
 
 # 프론트엔드 빌드
-COPY client ./client
+COPY src/client ./
 RUN npm run build
 
 # Nginx 설정 및 정적 파일 복사
 FROM nginx:latest
-COPY --from=builder /app/client/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
