--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -3,5 +3,5 @@ ENV MYSQL_ROOT_PASSWORD=rootpass
 ENV MYSQL_DATABASE=chatdb
 ENV MYSQL_USER=chatuser
 ENV MYSQL_PASSWORD=chatpass
-COPY db/init.sql /docker-entrypoint-initdb.d/
+COPY ./init.sql /docker-entrypoint-initdb.d/
 EXPOSE 3306
