--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18
 WORKDIR /app
 
 # 패키지 설치
-COPY src/server/package.json src/server/package-lock.json ./
+COPY ./src/server/package.json ./src/server/package-lock.json ./
 RUN npm install
 
 # 백엔드 코드 복사
